Telemetry API implemented
